--- a/public/series/index.html
+++ b/public/series/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head><script src="/livereload.js?mindelay=10&amp;v=2&amp;port=1313&amp;path=livereload" data-no-instant defer></script>
+    <head>
         <meta charset="UTF-8">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
@@ -10,7 +10,7 @@
 <meta name="keywords" content="homepage, blog" />
 <meta name="robots" content="noodp" />
 <meta name="theme-color" content="" />
-<link rel="canonical" href="//localhost:1313/series/" />
+<link rel="canonical" href="0x30.dev/series/" />
 
 
     <title>
@@ -23,38 +23,38 @@
 
 
 
-<link rel="stylesheet" href="/main.949191c1dcc9c4a887997048b240354e47152016d821198f89448496ba42e491.css" integrity="sha256-lJGRwdzJxKiHmXBIskA1TkcVIBbYIRmPiUSElrpC5JE=">
+<link rel="stylesheet" href="0x30.dev/main.949191c1dcc9c4a887997048b240354e47152016d821198f89448496ba42e491.css" integrity="sha256-lJGRwdzJxKiHmXBIskA1TkcVIBbYIRmPiUSElrpC5JE=">
 
 
 
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="">
-    <link rel="shortcut icon" href="/favicon.ico">
+    <link rel="apple-touch-icon" sizes="180x180" href="/0x30.dev/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/0x30.dev/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/0x30.dev/favicon-16x16.png">
+    <link rel="manifest" href="/0x30.dev/site.webmanifest">
+    <link rel="mask-icon" href="/0x30.dev/safari-pinned-tab.svg" color="">
+    <link rel="shortcut icon" href="/0x30.dev/favicon.ico">
     <meta name="msapplication-TileColor" content="">
 
 
 
   <meta itemprop="name" content="Series">
   <meta itemprop="description" content="My blog">
-  <meta itemprop="image" content="//localhost:1313/">
+  <meta itemprop="image" content="0x30.dev/">
 
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image" content="//localhost:1313/">
+  <meta name="twitter:image" content="0x30.dev/">
   <meta name="twitter:title" content="Series">
   <meta name="twitter:description" content="My blog">
 
 
 
-    <meta property="og:url" content="//localhost:1313/series/">
+    <meta property="og:url" content="0x30.dev/series/">
   <meta property="og:site_name" content="0x30">
   <meta property="og:title" content="Series">
   <meta property="og:description" content="My blog">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="website">
-    <meta property="og:image" content="//localhost:1313/">
+    <meta property="og:image" content="0x30.dev/">
 
 
 
@@ -63,7 +63,7 @@
 
 
 
-<link rel="alternate" type="application/rss+xml" href="//localhost:1313/series/index.xml" title="0x30" />
+<link rel="alternate" type="application/rss+xml" href="0x30.dev/series/index.xml" title="0x30" />
 
 
 
@@ -100,7 +100,7 @@
         <span class="header__right">
             
                 <nav class="menu">
-    <ul class="menu__inner"><li><a href="/posts">Posts</a></li>
+    <ul class="menu__inner"><li><a href="/0x30.dev/posts">Posts</a></li>
     </ul>
 </nav>
 
@@ -150,7 +150,7 @@
 
 
 
-<script type="text/javascript" src="/bundle.min.85fad2de4f13fec3bcb3b3cb10430cdb44a7b4a9749b32938241a5c6e77718df7624f1002b880521fdc26e24ec1077fda214bf1cb36ee3045510760d09638cae.js" integrity="sha512-hfrS3k8T/sO8s7PLEEMM20SntKl0mzKTgkGlxud3GN92JPEAK4gFIf3CbiTsEHf9ohS/HLNu4wRVEHYNCWOMrg=="></script>
+<script type="text/javascript" src="0x30.dev/bundle.min.85fad2de4f13fec3bcb3b3cb10430cdb44a7b4a9749b32938241a5c6e77718df7624f1002b880521fdc26e24ec1077fda214bf1cb36ee3045510760d09638cae.js" integrity="sha512-hfrS3k8T/sO8s7PLEEMM20SntKl0mzKTgkGlxud3GN92JPEAK4gFIf3CbiTsEHf9ohS/HLNu4wRVEHYNCWOMrg=="></script>
 
 
 
